[package]
name = "gmi_server"
version = "0.1.0"
edition = "2021"

[dependencies]
#SUI
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
sui-shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
sui-move_types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types" }


#TOKIO
tokio-stream = "0.1.15"
tokio = { version = "1.2", features = ["full"] }

#ERROR
anyhow = "1.0"

#JSON
serde_json = "1.0.114"
serde = "1.0.201"


#ENV
dotenv = "0.15.0"


#LOG
log = "0.4.21"


#Client
reqwest = { version = "0.11", features = ["json"] }

#DB
once_cell = "1.19.0"
surrealdb = "1.5.1"
regex = "1.10.4"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rust_decimal = "1.35.0"
